lab1/Test/L1-A-13-15.output
Error Type A at Line 3
Error Type B at Line 10
Error Type B at Line 12
Error Type A at Line 12
Error Type B at Line 13
Error Type B at Line 15
Error Type B at Line 24
Error Type B at Line 33
Error Type B at Line 39
Error Type B at Line 40
