lab1/Test/L1-A-13-15.cmm
struct {
};
int xopzdah ( int &fKb3AeB , struct u os_uW26sx ) 
  {
  if ( cCB5EyrmZM2dH6r )   while ( apRTN )   Q3KXrx7DXx088p7 
    ;

else {
    int sg6X5leUL4 
    float OposQrFc3olR [ 24968269 ] = pnzNVl_F5QQEEiR1I9dF 
      , BdHvIvVnnA ;
/     SuDLpusSVBuV8nRFjts ;#
    if ( yGT )     return QotzlKr else ;
else     if ( EppKN )     if ( rNF9BKlZ1SXWwcheOy 
          while ( gPwHgxq )     EPDVx7vIP || yELkhtsY && 
      yOco_Nu7BtTiJx <= SXhbHdUOLVLj0Ok9OYyJ + mIx2WTaL 
      * yERUDE0Hk8 [ t5XMQ7XEN = gtMz45dvLLp6YdKSs / WqCsmTLc47 
      ( FwQDrtlmUhW_A2tv != SjTYpEG2FtsGl3j6AmZn ( dEG3Lw 
      , J17ecm3m_7u < eT / NV7081EDdIdOvSwZIJWp [ rs1nlz0syeZ3dKiCDx 
      = hpiSf == ! ( x97siinRoiG2 || _2U >= s6LxmjNEWRICeiJ 
      [ t_3SAjWnFtpp > m0VhY - OFBkHtcTO7I1pX ( J2gWzZ12Xw5cDTT6I 
      || ! F6X [ - LPeD [ He && m + Hu [ h5jTiHdN2C_ + PprGKOA3abeCQE 
      ] / - - 1294812723 ] ] ) ] . N42lyYE5LOy5agQ1_ ) ] 
      ) ) ] / 134065970.598437391 UMB87Cgp - - ! sh ( ) 
      ;




  }
}
int OzFpkow5iBUdYYqaUCLF 
else ;
struct I3LjH6FxXqVvdq1N rVEN96WDB ( ) {
}
int zoRTwwLEGSmJxl , Moo4E_b_sB_d 


struct GfA39OOpZM ;
int sb3 ( ) int SrtGEoMrTL ;
}
struct B8D4LFpWaFhX {
};
